Style Guide/css/main.css
/*
  STYLE GUIDE STYLING 
  Default styling for the style guide 
*/
body {
  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
  padding: 2rem;
  color: black;
  background-image: url("img/bg.png");
  background-color: white;
}

section:not([id]) {
  margin: 1em 0;
  padding: 1em 0;
  border-bottom: 0.15em solid #333;
}

section h2 {
  margin-bottom: 0.5em;
}

section h3 {
  margin-bottom: 0;
}

section p {
  margin-top: 0;
}

nav.mainMenu {
    background-color: black;
    margin: -2.5rem -2.5rem 0 -2.5rem;
    padding: 0.7rem 19rem 0.7rem 2rem;
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    color: #FFF;
    text-decoration: none;
    -webkit-transition: background-color 0.5s ease-out;
    transition: background-color 0.5s ease-out;
}

nav a{
	text-decoration: none;
	text-transform: uppercase;
	color: #fff;
	margin-right: 1rem;
}

nav a:active, a:hover {
	opacity:0.4;
	-o-transition: 0.4s;
	-ms-transition: 0.4s;
	-moz-transition: 0.4s;
	-webkit-transition: 0.4s;
}

section code {
    background-color: whitesmoke;
    padding: 0.5em 0.75em;
    display: block;
}


ul.citations {
    margin-left: 0.25em;
    padding-left: 0.25em;
    max-width: 40rem;
}

ul.citations li {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
  padding-bottom: 1em;
}

ul.citations li strong {
  font-weight: normal;
  font-style: italic;
}

cite {
  font-style: normal;
}

.tab {
    padding-left: 2rem;
}

.tab2 {
    padding-left: 4rem;
}

a.cite {
    color: black;
}

/* 
  INTERACTIVE ELEMENTS -------------------
*/

/* Styling for the navigation button */
.button-nav {
  display: inline-block;
  padding: 0.5em 0.75em;
  color: #FFF;
  background-color: #333;
  border-radius: 0.25em;
  text-decoration: none;
  -webkit-transition: background-color 0.5s ease-out;
  transition: background-color 0.5s ease-out;
}

.button:hover{
	opacity: 0.4;
	-o-transition: 0.4s;
	-ms-transition: 0.4s;
	-moz-transition: 0.4s;
	-webkit-transition: 0.4s;
}


.button.submit {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	padding: 1rem;
	color: black;
	background: white;
	text-transform: uppercase;
}

.button.reset {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	padding: 1rem;
    color: black;
	background: white;
	text-transform: uppercase;
}

.textfield-label {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

.textfield {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	margin: 0.5rem 0rem;
	padding: 0.5rem 7rem 0.5rem 1rem;
}

label {
    display: block;
}


/* 
  TEXT ELEMENTS -------------------
*/

ul li {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;   
    color: black;
}

ol li {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;    
    color: black;
}

h1.header {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 2.9rem;
    color: white;
    background-color: #696969;
    margin: 0rem -2.5rem 1.5rem -2.5rem;
    padding: 0.5rem 0.5rem 0.5rem 2rem;
    text-transform: uppercase;
}


h1 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 2.9rem;
    color: white;
    background-color: #696969;
    margin: -0.5rem 0rem 1.5rem 0rem;
    padding: 0.5rem ;
    text-transform: uppercase;
}

h2 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

h3 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

h4 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    text-transform: uppercase;
}

h5 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 1rem;
    text-transform: uppercase;
}

p {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
}

h2.idTitle {
	color: #ED5C0C;
    font-size: 2rem;
    text-transform: uppercase;
    margin: 0.5rem 0rem;
}

h2.idTitle1 {
	color: #ED5C0C;
    font-size: 2rem;
    text-transform: uppercase;
    margin: 2.5rem 0 1rem;
}


/* 
  COMBINED ELEMENTS -------------------
*/

nav.menu {
    background-color: black;
    padding: 0.7rem 19rem 0.7rem 0.7rem;
}

.menu {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;  
    padding: 0.5em 0.75em;
    color: #FFF;
    text-decoration: none;
    -webkit-transition: background-color 0.5s ease-out;
    transition: background-color 0.5s ease-out;
}

/*.menu:hover{
    text-decoration: underline;
}*/

.chef-listing {
    display: inline-block;
    margin: 0 15rem 0 15rem;
}

/*Gird system styling*/

.grid_box{
    background-color: #333;
    padding:1em 0;
    text-align:center;
    outline:0.5em solid #696969;
    margin: 0.75em;
    width:100%;
    color: white;
}

/*
  STYLE GUIDE STYLING 
  Default styling for the style guide 
*/
body {
  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
  padding: 2rem 2rem 2rem 2rem;
  color: black;
  background-image: url("http://www.sfu.ca/~bkl6/IAT339/Style%20Guide/img/bg.png");  
}

section:not([id]) {
  margin: 1em 0;
  padding: 0.1em 0 2.6em 0;
  border-bottom: 0.15em solid #333;
}

section h2 {
  margin-top: 0 0 0.5em 0;
  
}

section h3 {
  margin-bottom: 0;
}

section p {
  margin-top: 0;
}

nav.mainMenu {
    background-color: black;
    margin: -2.5rem -2.5rem 0 -2.5rem;
    padding: 0.7rem 19rem 0.7rem 2.5rem;
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    color: #FFF;
    text-decoration: none;
    -webkit-transition: background-color 0.5s ease-out;
    transition: background-color 0.5s ease-out;
}

nav a{
	text-decoration: none;
	text-transform: uppercase;
	color: #fff;
	margin-right: 1rem;
}

nav a:active, a:hover {
	opacity:0.4;
	-o-transition: 0.4s;
	-ms-transition: 0.4s;
	-moz-transition: 0.4s;
	-webkit-transition: 0.4s;
}

section code {
    background-color: whitesmoke;
    padding: 0.5em 0.75em;
    display: block;
}


ul.citations {
    margin-left: 0.25em;
    padding-left: 0.25em;
    max-width: 40rem;
}

ul.citations li {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
  padding-bottom: 1em;
}

ul.citations li strong {
  font-weight: normal;
  font-style: italic;
}

cite {
  font-style: normal;
}

.tab {
    padding-left: 2rem;
}

.tab2 {
    padding-left: 4rem;
}

a.cite {
    color: black;
}

/* 
  INTERACTIVE ELEMENTS -------------------
*/

/* Styling for the navigation button */
.button-nav {
  display: inline-block;
  padding: 0.5em 0.75em;
  color: #FFF;
  background-color: #333;
  border-radius: 0.25em;
  text-decoration: none;
  -webkit-transition: background-color 0.5s ease-out;
  transition: background-color 0.5s ease-out;
}

.button:hover{
	opacity: 0.4;
	-o-transition: 0.4s;
	-ms-transition: 0.4s;
	-moz-transition: 0.4s;
	-webkit-transition: 0.4s;
}


.button.submit {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	padding: 1rem;
	color: black;
	background: white;
	text-transform: uppercase;
}

.button.reset {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	padding: 1rem;
    color: black;
	background: white;
	text-transform: uppercase;
}

.textfield-label {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

.textfield {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	margin: 0.5rem 0rem;
	padding: 0.5rem 7rem 0.5rem 1rem;
}

label {
    display: block;
}


/* 
  TEXT ELEMENTS -------------------
*/

.blocks {
    display: inline-block;
    padding: 2.7rem 1rem 2rem 1rem;
	text-align: center;
    color: white;
    width: 6rem;
	height: 3rem;
}

.cBlack {
    background: #000000;
}

.cWhite {
    background: #FFFFFF;
    color: black;
}

.cOrange {
    background: #ED5C0C;

}

.cCreamsicle {
    background: #E5CEB1;

}

.cGray {
    background: #696969;

}

ul li {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;   
    color: black;
}

ol li {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;    
    color: black;
}

ol {
    margin-bottom: 0rem;
}

ul {
    margin-bottom: 0rem;
}

h1.header {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 2.9rem;
    color: white;
    background-color: #696969;
    margin: 0rem -2.5rem 1.5rem -2.5rem;
    padding: 0.5rem 0.5rem 0.5rem 2.5rem;
    text-transform: uppercase;
}


h1 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 2.9rem;
    color: white;
    background-color: #696969;
    margin: -0.5rem 0rem 1.5rem 0rem;
    padding: 0.5rem ;
    text-transform: uppercase;
}

h2 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

h3 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

h4 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    text-transform: uppercase;
}

h4.sampleH4 {
    margin-bottom: 0rem;
}

h5 {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 1rem;
    text-transform: uppercase;
}

p {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 80rem;
}

p.sampleParagraph {
    margin-bottom: 0rem;
}

h2.idTitle {
	color: #ED5C0C;
    font-size: 2rem;
    text-transform: uppercase;
    margin: 0.5rem 0rem;
}

h2.idTitle1 {
	color: #ED5C0C;
    font-size: 2rem;
    text-transform: uppercase;
    margin: 2.5rem 0 1rem;
}


/* 
  COMBINED ELEMENTS -------------------
*/

nav.menu {
    background-color: black;
    padding: 0.7rem 19rem 0.7rem 0.7rem;
}

.menu {
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
    font-size: 0.9rem;
    max-width: 40rem;  
    padding: 0.5em 0.75em;
    color: #FFF;
    text-decoration: none;
    -webkit-transition: background-color 0.5s ease-out;
    transition: background-color 0.5s ease-out;
}

/*.menu:hover{
    text-decoration: underline;
}*/

.chef-listing {
    margin: 0 15rem 0 15rem;
}

